--- a/examples/surveillance.yml
+++ b/examples/surveillance.yml
@@ -5,18 +5,18 @@ networks:
     labels:
       org.fundacionctic.wotemu.net: ''
     name: cloud_user
-  edge_link_loc1:
+  edge_2g_loc1:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.net: ''
-    name: edge_link_loc1
-  edge_link_loc2:
+    name: edge_2g_loc1
+  edge_3g_loc2:
     attachable: true
     driver: overlay
     labels:
       org.fundacionctic.wotemu.net: ''
-    name: edge_link_loc2
+    name: edge_3g_loc2
   field_loc1:
     attachable: true
     driver: overlay
@@ -36,6 +36,64 @@ networks:
       org.fundacionctic.wotemu.servicenet: ''
     name: srvnet_mongo_cloud
 services:
+  broker_loc1:
+    cap_add:
+    - ALL
+    command:
+    - broker
+    depends_on:
+    - gw_edge_2g_loc1
+    - docker_api_proxy
+    - redis
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.broker: ''
+    networks:
+    - edge_2g_loc1
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  broker_loc2:
+    cap_add:
+    - ALL
+    command:
+    - broker
+    depends_on:
+    - gw_edge_3g_loc2
+    - docker_api_proxy
+    - redis
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: agmangas/wotemu
+    labels:
+      org.fundacionctic.wotemu.broker: ''
+    networks:
+    - edge_3g_loc2
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
   camera_loc1_0:
     cap_add:
     - ALL
@@ -45,9 +103,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
+    - docker_api_proxy
     - redis
     - gw_field_loc1
-    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -82,9 +140,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
+    - docker_api_proxy
     - redis
     - gw_field_loc1
-    - docker_api_proxy
     deploy:
       resources:
         limits:
@@ -119,9 +177,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
@@ -156,9 +214,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
@@ -193,9 +251,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
@@ -230,9 +288,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
@@ -267,9 +325,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
@@ -304,9 +362,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
@@ -341,9 +399,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
@@ -378,9 +436,9 @@ services:
     - wotemu_camera
     - --enable-http
     depends_on:
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
@@ -418,15 +476,15 @@ services:
     - mongodb://mongo
     - --func-param
     - observed_things
-    - '[{"servient_host": "detector_loc1.edge_link_loc1", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"},
-      {"servient_host": "detector_loc2.edge_link_loc2", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"}]'
+    - '[{"servient_host": "detector_loc1.edge_2g_loc1", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"},
+      {"servient_host": "detector_loc2.edge_3g_loc2", "thing_id": "urn:org:fundacionctic:thing:wotemu:detector"}]'
     - --enable-http
     depends_on:
-    - redis
-    - gw_edge_link_loc2
     - docker_api_proxy
     - gw_cloud_user
-    - gw_edge_link_loc1
+    - redis
+    - gw_edge_2g_loc1
+    - gw_edge_3g_loc2
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
       NODE_HOSTNAME: '{{.Node.Hostname}}'
@@ -444,10 +502,10 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
+    - edge_3g_loc2
     - cloud_user
-    - edge_link_loc1
+    - edge_2g_loc1
     - srvnet_mongo_cloud
-    - edge_link_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   detector_loc1:
@@ -460,18 +518,19 @@ services:
     - --func-param
     - cameras
     - '[{"servient_host": "camera_loc1_0.field_loc1"}, {"servient_host": "camera_loc1_1.field_loc1"}]'
-    - --enable-http
+    - --enable-mqtt
     depends_on:
+    - docker_api_proxy
     - redis
     - gw_field_loc1
-    - gw_edge_link_loc1
-    - docker_api_proxy
+    - gw_edge_2g_loc1
     deploy:
       resources:
         limits:
           memory: 1G
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker_loc1.edge_2g_loc1
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -488,7 +547,7 @@ services:
     labels:
       org.fundacionctic.wotemu.node: ''
     networks:
-    - edge_link_loc1
+    - edge_2g_loc1
     - field_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
@@ -505,18 +564,19 @@ services:
       {"servient_host": "camera_loc2_2.field_loc2"}, {"servient_host": "camera_loc2_3.field_loc2"},
       {"servient_host": "camera_loc2_4.field_loc2"}, {"servient_host": "camera_loc2_5.field_loc2"},
       {"servient_host": "camera_loc2_6.field_loc2"}, {"servient_host": "camera_loc2_7.field_loc2"}]'
-    - --enable-http
+    - --enable-mqtt
     depends_on:
-    - gw_edge_link_loc2
-    - redis
-    - docker_api_proxy
     - gw_field_loc2
+    - gw_edge_3g_loc2
+    - docker_api_proxy
+    - redis
     deploy:
       resources:
         limits:
           memory: 1G
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      MQTT_BROKER_HOST: broker_loc2.edge_3g_loc2
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
       PORT_CATALOGUE: '9090'
@@ -534,7 +594,7 @@ services:
       org.fundacionctic.wotemu.node: ''
     networks:
     - field_loc2
-    - edge_link_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   docker_api_proxy:
@@ -552,11 +612,11 @@ services:
       TASKS: '1'
     image: tecnativa/docker-socket-proxy
     networks:
-    - field_loc2
-    - edge_link_loc1
-    - edge_link_loc2
     - cloud_user
     - field_loc1
+    - field_loc2
+    - edge_3g_loc2
+    - edge_2g_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   gw_cloud_user:
@@ -589,13 +649,13 @@ services:
     - cloud_user
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_edge_link_loc1:
+  gw_edge_2g_loc1:
     cap_add:
     - ALL
     command:
     - gateway
-    - delay --time 300 --jitter 150 --distribution normal
-    - rate --rate 1500kbit
+    - delay --time 700 --jitter 100 --distribution normal
+    - rate --rate 50kbit
     depends_on:
     - docker_api_proxy
     - redis
@@ -616,10 +676,10 @@ services:
     labels:
       org.fundacionctic.wotemu.gw: ''
     networks:
-    - edge_link_loc1
+    - edge_2g_loc1
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  gw_edge_link_loc2:
+  gw_edge_3g_loc2:
     cap_add:
     - ALL
     command:
@@ -646,7 +706,7 @@ services:
     labels:
       org.fundacionctic.wotemu.gw: ''
     networks:
-    - edge_link_loc2
+    - edge_3g_loc2
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   gw_field_loc1:
@@ -729,11 +789,11 @@ services:
     labels:
       org.fundacionctic.wotemu.redis: ''
     networks:
-    - field_loc2
-    - edge_link_loc1
-    - edge_link_loc2
     - cloud_user
     - field_loc1
+    - field_loc2
+    - edge_3g_loc2
+    - edge_2g_loc1
     ports:
     - '6379'
   user:
@@ -756,9 +816,9 @@ services:
     - lambd
     - '5'
     depends_on:
+    - docker_api_proxy
     - gw_cloud_user
     - redis
-    - docker_api_proxy
     deploy:
       replicas: 5
     environment:
